@@ -52,6 +52,7 @@ New in v0.7.02 (2015/02/??)
   - see http://pep8.readthedocs.org
 * Fixes for 2to3 issues
 * Fix spelling error in manpage, bug 1419314.
+* Fix _librsyncmodule.c compilation, bug 1416344, thanks to Kari Hautio.
 
 
 New in v0.7.01 (2015/01/11)
